--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Rock Paper Scissors</title>
   </head>
   <body>
+    <div id="modal-root"></div>
     <div id="root"></div>
     <script type="module" src="./src/main.tsx"></script>
   </body>
